# software-designer-web

./: .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  requirements.txt
scripts/: generate_requirements.py
src/: app.py  chat.py  common.py  settings.py  utils.py
